--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["images/"]
 edition = "2024"
 
 [dependencies]
-dioxus = "0.6.3"
+dioxus = "0.7.0-rc.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 fastrand = "2.0"
