--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dioxus-leaflet"
-version = "0.1.7"
+version = "0.1.8-rc.0"
 authors = ["Lucas Heintzmann <lheintzmann1@disroot.org>"]
 license = "MIT OR Apache-2.0"
 description = "A general-purpose Leaflet map component for Dioxus applications"
