--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,19 @@
-[package]
-name = "dioxus-leaflet"
-version = "0.1.8-rc.0"
-authors = ["Lucas Heintzmann <lheintzmann1@disroot.org>"]
-license = "MIT OR Apache-2.0"
-description = "A general-purpose Leaflet map component for Dioxus applications"
-homepage = "https://github.com/lheintzmann1/dioxus-leaflet"
-repository = "https://github.com/lheintzmann1/dioxus-leaflet"
-readme = "README.md"
-exclude = ["images/"]
-edition = "2024"
+[workspace]
+resolver = "3"
+members = ["demo","dioxus-leaflet"]
 
-[dependencies]
+[workspace.dependencies]
 dioxus = "0.7.0-rc.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-fastrand = "2.0"
+dioxus-leaflet = { path = "dioxus-leaflet" }
 
-[features]
-default = []
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
