--- a/dioxus-leaflet/Cargo.toml
+++ b/dioxus-leaflet/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 fastrand = "2.0"
 dioxus-logger = "0.7.0-rc.0"
+color = { version = "0.3.2", features = ["serde"] }
 
 [features]
 default = []
