Update version, add author

--- a/dioxus-leaflet/Cargo.toml
+++ b/dioxus-leaflet/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "dioxus-leaflet"
-version = "0.1.8-rc.2"
-authors = ["Lucas Heintzmann <lheintzmann1@disroot.org>"]
+version = "0.2.0"
+authors = [
+    "Lucas Heintzmann <lheintzmann1@disroot.org>", 
+    "Steven Vergenz <1882376+stevenvergenz@users.noreply.github.com>",
+]
 license = "MIT OR Apache-2.0"
 description = "A general-purpose Leaflet map component for Dioxus applications"
 homepage = "https://github.com/lheintzmann1/dioxus-leaflet"
