--- a/dioxus-leaflet/Cargo.toml
+++ b/dioxus-leaflet/Cargo.toml
@@ -19,10 +19,10 @@ serde_json = "1.0"
 fastrand = "2.0"
 dioxus-logger = "0.7.0-rc.0"
 color = { version = "0.3.2", features = ["serde"] }
-dioxus-use-js = "0.2.0"
+dioxus-use-js = "0.3.1"
 
 [build-dependencies]
-dioxus-use-js = { version = "0.2.0", features = ["compile"] }
+dioxus-use-js = { version = "0.3.1", features = ["build"] }
 
 [features]
 default = []
