--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "3"
 members = ["demo","dioxus-leaflet"]
 
 [workspace.dependencies]
-dioxus = "0.7.0-rc.2"
+dioxus = "0.7.2"
 dioxus-leaflet = { path = "dioxus-leaflet" }
 
 [profile]
